examples/test/testpolicy5345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5345
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key48: value22
      key34: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value33
      podSelector:
        matchLabels:
          key26: value14
          key13: value4
